force-app/main/default/objects/Divest_Decom_Key_Contacts__c/Divest_Decom_Key_Contacts__c.object-meta.xml
<CustomObject>
    <description>Tracks Key Contacts for Divest &amp; Decom Workstreams</description>
    <label>Divest/Decom Key Contact</label>
    <nameField>
        <displayFormat>Key Contacts-{0}</displayFormat>
        <label>Divest/Decom Key Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Divest/Decom Key Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>