force-app/main/default/objects/Divest_Decom_Key_Contacts__c/fields/Deconstruction_PM__c.field-meta.xml
<CustomField>
    <fullName>Deconstruction_PM__c</fullName>
    <formula>Site_Deconstruction__r.Project_Manager__r.FirstName  &amp; &quot; &quot; &amp;  Site_Deconstruction__r.Project_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deconstruction PM</label>
    <type>Text</type>
</CustomField>