force-app/main/default/objects/Divest_Decom_Key_Contacts__c/fields/Divestiture_Site__c.field-meta.xml
<CustomField>
    <fullName>Divestiture_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Divestiture Site</label>
    <referenceTo>Divestiture_Site__c</referenceTo>
    <relationshipLabel>Divest/Decom Key Contact</relationshipLabel>
    <relationshipName>Divest_Decom_Key_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>