force-app/main/default/objects/Divest_Decom_Key_Contacts__c/fields/Lease_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Lease_Negotiation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease Negotiation</label>
    <referenceTo>Lease_Negotiation__c</referenceTo>
    <relationshipLabel>Divest/Decom Key Contact</relationshipLabel>
    <relationshipName>Divest_Decom_Key_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>