force-app/main/default/objects/Divest_Decom_Key_Contacts__c/fields/Lease_Negotiation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lease_Negotiation_Owner__c</fullName>
    <formula>Lease_Negotiation__r.Owner:User.FirstName  &amp; &quot; &quot; &amp;  Lease_Negotiation__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Negotiation Owner</label>
    <type>Text</type>
</CustomField>