force-app/main/default/objects/Divest_Decom_Key_Contacts__c/fields/Lease_Negotiation_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Lease_Negotiation_Submitter__c</fullName>
    <formula>Lease_Negotiation__r.Submitter__r.FirstName  &amp; &quot; &quot; &amp;  Lease_Negotiation__r.Submitter__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Negotiation Submitter</label>
    <type>Text</type>
</CustomField>