force-app/main/default/objects/Divest_Decom_Key_Contacts__c/fields/Site_Deconstruction__c.field-meta.xml
<CustomField>
    <fullName>Site_Deconstruction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Deconstruction</label>
    <referenceTo>Site_Decommission__c</referenceTo>
    <relationshipLabel>Divest/Decom Key Contact</relationshipLabel>
    <relationshipName>Divest_Decom_Key_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>